Phase 4 - login/register endpoints | a possibility to declare public endpoints
