# conf/swagger.yaml
@@ -7,6 +7,13 @@ host: "localhost:3000"
 basePath: "/"
 schemes:
 - "http"
+securityDefinitions:
+  bearerAuth:
+    type: apiKey
+    in: header
+    name: Authorization
+security:
+  - bearerAuth: []
 tags:
 - name: "books"
   description: "REST endpoints related to 'books' collection"
